--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
+html {
+  background: #c2a3d1;
+}
 .App {
   text-align: center;
+  max-width: 80vw;
+  margin: auto;
+  margin-bottom: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  text-align: left;
+  color: #351897;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h3 {
+  color: #351897;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.addShopComp {
+  background: white;
+  box-shadow: 0 15px 20px #0000005b;
+  padding: 1rem 2rem;
+}
+
+.addShopComp > input,
+select {
+  padding: 5px;
+  margin: 5px 10px;
+}
+
+.addShopComp > input {
+  width: 200px;
+}
+
+.addShopComp > select {
+  width: 215px;
+}
+
+.addShopComp > button {
+  width: min(400px, 60vw);
+  height: 2.5rem;
+  font-size: 1.1rem;
+  background: #351897;
   color: white;
+  border: none;
+  margin-top: 2rem;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.cardContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.shopCard {
+  text-align: left;
+  width: 350px;
+  height: 200px;
+  padding: 20px;
+  margin-top: 20px;
+  background: #ffffff;
+  box-shadow: 0 15px 20px #0000005b;
+}
+
+.date {
+  color: #796548;
+}
+
+.shopCard > button {
+  background: #fe5b5b;
+  border: none;
+  padding: 2px 10px;
+  cursor: pointer;
+  margin-left: 80%;
+  color: white;
+  padding: 5px 10px;
+  margin-top: 5px;
 }
